@@ -45,10 +45,12 @@ import org.graylog.plugins.pipelineprocessor.ast.Stage;
 import org.graylog.plugins.pipelineprocessor.audit.PipelineProcessorAuditEventTypes;
 import org.graylog.plugins.pipelineprocessor.db.PaginatedPipelineService;
 import org.graylog.plugins.pipelineprocessor.db.PipelineDao;
+import org.graylog.plugins.pipelineprocessor.db.PipelineRulesMetadataDao;
 import org.graylog.plugins.pipelineprocessor.db.PipelineService;
 import org.graylog.plugins.pipelineprocessor.db.PipelineStreamConnectionsService;
 import org.graylog.plugins.pipelineprocessor.db.RuleDao;
 import org.graylog.plugins.pipelineprocessor.db.RuleService;
+import org.graylog.plugins.pipelineprocessor.db.mongodb.MongoDbPipelineMetadataService;
 import org.graylog.plugins.pipelineprocessor.parser.ParseException;
 import org.graylog.plugins.pipelineprocessor.parser.PipelineRuleParser;
 import org.graylog2.audit.jersey.AuditEvent;
@@ -74,6 +76,8 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
@@ -104,6 +108,7 @@ public class PipelineResource extends RestResource implements PluginRestResource
     private final PipelineStreamConnectionsService connectionsService;
     private final InputRoutingService inputRoutingService;
     private final RuleService ruleService;
+    private final MongoDbPipelineMetadataService metadataService;
 
     @Inject
     public PipelineResource(PipelineService pipelineService,
@@ -111,7 +116,8 @@ public class PipelineResource extends RestResource implements PluginRestResource
                             PipelineRuleParser pipelineRuleParser,
                             PipelineStreamConnectionsService connectionsService,
                             InputRoutingService inputRoutingService,
-                            RuleService ruleService) {
+                            RuleService ruleService,
+                            MongoDbPipelineMetadataService metadataService) {
         this.pipelineService = pipelineService;
         this.pipelineRuleParser = pipelineRuleParser;
         this.paginatedPipelineService = paginatedPipelineService;
@@ -119,6 +125,7 @@ public class PipelineResource extends RestResource implements PluginRestResource
         this.connectionsService = connectionsService;
         this.inputRoutingService = inputRoutingService;
         this.ruleService = ruleService;
+        this.metadataService = metadataService;
     }
 
     @ApiOperation(value = "Create a processing pipeline from source")
@@ -229,21 +236,42 @@ public class PipelineResource extends RestResource implements PluginRestResource
 
         final PaginatedList<PipelineDao> result = paginatedPipelineService
                 .findPaginated(searchQuery, filter, page, perPage, sort, order);
+        final Map<String, PipelineRulesMetadataDao> metadataDaos = metadataService.get(
+                result.stream().map(PipelineDao::id).collect(Collectors.toSet())
+        );
         final List<PipelineSource> pipelineList = result.stream()
-                .map(dao -> PipelineSource.fromDao(pipelineRuleParser, dao))
-                .collect(Collectors.toList());
+                .map(dao -> PipelineSource.fromDao(
+                        pipelineRuleParser, dao, metadataDaos.get(dao.id()) != null && metadataDaos.get(dao.id()).hasDeprecatedFunctions()))
+                .toList();
         final PaginatedList<PipelineSource> pipelines = new PaginatedList<>(pipelineList,
                 result.pagination().total(), result.pagination().page(), result.pagination().perPage());
         return PaginatedResponse.create("pipelines", pipelines);
     }
 
-    @ApiOperation(value = "Get a processing pipeline", notes = "It can take up to a second until the change is applied")
+    @ApiOperation(value = "Get a processing pipeline")
     @Path("/{id}")
     @GET
     public PipelineSource get(@ApiParam(name = "id") @PathParam("id") String id) throws NotFoundException {
         checkPermission(PipelineRestPermissions.PIPELINE_READ, id);
         final PipelineDao dao = pipelineService.load(id);
         return PipelineSource.fromDao(pipelineRuleParser, dao);
+    }
+
+    @ApiOperation(value = "Get rules metadata of a processing pipeline")
+    @Path("/{id}/meta/rules")
+    @GET
+    public PipelineRulesMetadataDao getRulesMetadata(@ApiParam(name = "id") @PathParam("id") String id) throws NotFoundException {
+        checkPermission(PipelineRestPermissions.PIPELINE_READ, id);
+        return metadataService.get(id);
+    }
+
+    @ApiOperation(value = "Get list of deprecated functions used in specified rule")
+    @Path("/rule/{id}/deprecated_functions")
+    @GET
+    public Set<String> getDeprecatedFunctionsForRule(@ApiParam(name = "id") @PathParam("id") String id)
+            throws NotFoundException {
+        checkPermission(PipelineRestPermissions.PIPELINE_RULE_READ, id);
+        return deprecatedFunctionsRule(id);
     }
 
     @ApiOperation(value = "Modify a processing pipeline", notes = "It can take up to a second until the change is applied")
@@ -288,7 +316,7 @@ public class PipelineResource extends RestResource implements PluginRestResource
 
         // Add rule to existing pipeline
         PipelineSource pipelineSource = PipelineSource.fromDao(pipelineRuleParser, pipelineDao);
-        final List<String> rules0 = pipelineSource.stages().get(0).rules();
+        final List<String> rules0 = pipelineSource.stages().getFirst().rules();
         if (rules0.stream().filter(ruleRef -> ruleRef.equals(ruleDao.title())).findFirst().isEmpty()) {
             rules0.add(ruleDao.title());
             pipelineSource = pipelineSource.toBuilder()
@@ -356,5 +384,13 @@ public class PipelineResource extends RestResource implements PluginRestResource
             throw new BadRequestException("Pipeline cannot use system rules: " + usedSystemRules);
         }
 
+    }
+
+    private Set<String> deprecatedFunctionsRule(String ruleId) throws NotFoundException {
+        Set<String> superset = metadataService.getPipelinesByRule(ruleId).stream()
+                .flatMap(pipelineId -> metadataService.deprecatedFunctionsPipeline(pipelineId).stream())
+                .collect(Collectors.toSet());
+        final RuleDao rule = ruleService.load(ruleId);
+        return superset.stream().filter(func -> rule.source().contains(func)).collect(Collectors.toSet());
     }
 }
